--- a/periscope-web/src/main/webapp/pages/project/projectHome.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/projectHome.xhtml
@@ -12,7 +12,7 @@
 		<ui:include src="/template/flashmessages.xhtml" />
 		<center>
 			<div class="hero-unit">
-			<h2> Bem vindo ao projeto #{currentProject.title}</h2>
+			<h2> #{msgs['welcome.project']} #{currentProject.title}</h2>
 			<p>#{currentProject.description}</p>
 			</div>
 			
