--- a/periscope-web/src/main/webapp/pages/project/about.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/about.xhtml
@@ -36,14 +36,14 @@
                         </p:tab>
                     </p:accordionPanel>
                 </p:tab>
-                <p:tab title="Universidade Federal de Mato Grosso (UFMT)">
+                <p:tab title="#{msgs['ufmt']}">
                     <h:panelGrid columns="2" cellpadding="10">
-                        <h:outputText value="A Universidade Federal de Mato Grosso (UFMT) é uma universidade pública federal criada em 1970 e vinculada ao Ministério da Educação (Brasil), com campi em Cuiabá onde se situa a atual sede, Rondonópolis, Pontal do Araguaia, Barra do Garças e Sinop no estado de Mato Grosso, Brasil. As atividades de ensino, pesquisa e extensão estão concentradas em 99 cursos de graduação (incluídas as habilitações) e 60 de especialização sustentados em núcleos de investigação e extensão, onde mais de 34 000 estudantes realizam seus estudos." />
+                        <h:outputText value="#{msgs['ufmt.info']}" />
                     </h:panelGrid>
                 </p:tab>
-                <p:tab title="Instituto de Computação - UFMT">
+                <p:tab title="#{msgs['ic']}">
                     <h:panelGrid columns="2" cellpadding="10">
-                        <h:outputText value="O Instituto de Computação (IC), da Universidade Federal de Mato Grosso, é uma unidade acadêmica de excelência da área de computação, destinada à formação de pessoas e à pesquisa acadêmica no âmbito da graduação, da pós-graduação e da extensão. Constituído em 2008 como resultado do desejo e esforços de professores, alunos, técnicos, sociedade em geral e da sensibilidade da administração superior da UFMT." />
+                        <h:outputText value="#{msgs['ic.info']}" />
                     </h:panelGrid>
                 </p:tab>
             </p:accordionPanel>
