--- a/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
@@ -8,22 +8,22 @@
 
     <f:view contentType="text/html">
         <p:dialog id="inventorSugestions" widgetVar="invSugestionsDialog" modal="true"
-                  header="Criar regra" resizable="false">
+                  header="#{msgs['create.rule']}" resizable="false">
             <h:panelGrid columns="2" id="panelInventorHarmonized">		
-                <h:outputLabel value="Nome harmonizado " style="font-weight:bold"/>				
+                <h:outputLabel value="#{msgs['harmonized.name']} " style="font-weight:bold"/>				
                 <p:inputText value="#{inventorHarmonizationController.rule.name}"/>
 
                 <h:outputLabel value="#{msgs['acronym']} " style="font-weight:bold" />				
                 <p:inputText value="#{inventorHarmonizationController.rule.acronym}"/>
 
-                <h:outputLabel value="País " style="font-weight:bold"/>				
+                <h:outputLabel value="#{msgs['country']} " style="font-weight:bold"/>				
                 <p:selectOneMenu value="#{inventorHarmonizationController.rule.country.acronym}" valueChangeListener="#{inventorHarmonizationController.selectListener}">
                     <f:selectItems value="#{inventorHarmonizationController.countries}" var="c" itemValue="#{c.acronym}" itemLabel="#{c.name}"/>					
                     <p:ajax event="change" update="@this,state"/>
                 </p:selectOneMenu>
-                <h:outputLabel value="Estado" style="font-weight: bold"/>
+                <h:outputLabel value="#{msgs['state']}" style="font-weight: bold"/>
                 <p:selectOneMenu value="#{inventorHarmonizationController.rule.state.acronym}"  id="state">
-                    <f:selectItem itemLabel="Nenhuma" itemValue=""/>
+                    <f:selectItem itemLabel="#{msgs['none']}" itemValue=""/>
                     <f:selectItems  value="#{inventorHarmonizationController.states}" var="s" itemValue="#{s.acronym}" itemLabel="#{s.name}"/>
                 </p:selectOneMenu>
                 <br/>
@@ -32,14 +32,14 @@
 
             <h:panelGrid id="panelSugestions" columns="3">
                 <h:column>
-                    <h4>Nomes selecionados</h4>				
+                    <h4>#{msgs['selected.names']}</h4>				
                     <p:separator/>
                 </h:column>
                 <h:column>
                     <p:spacer width="50"/>
                 </h:column>
                 <h:column>
-                    <h4>Sugestões</h4>				
+                    <h4>#{msgs['sugestions']}</h4>				
                     <p:separator/>
                 </h:column>
                 <h:column>	
@@ -66,16 +66,16 @@
                             </li>
                         </ui:repeat>				
                         <h:panelGrid rendered="#{inventorHarmonizationController.inventorSugestions.size() == 0}">
-                            <li>Não existem sugestões.</li>
+                            <li>#{msgs['no.sugestions']}</li>
                         </h:panelGrid>
                     </ul>
                 </h:column>
             </h:panelGrid>
             <p:spacer height="50"/>
             <center>
-                <p:commandButton value="Salvar" action="#{inventorHarmonizationController.createRule()}"/>
+                <p:commandButton value="#{msgs['save']}" action="#{inventorHarmonizationController.createRule()}"/>
 
-                <p:commandButton value="Cancelar" immediate="true"
+                <p:commandButton value="#{msgs['cancel']}" immediate="true"
                                  oncomplete="invSugestionsDialog.hide()" />
             </center>
 
