--- a/periscope-web/src/main/webapp/pages/project/harmonization/harmonizationHome.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/harmonizationHome.xhtml
@@ -10,18 +10,18 @@
 
 	<ui:define name="content">
 		<ui:include src="/template/flashmessages.xhtml" />
-		<h2>Harmonização</h2>
+		<h2>#{msgs['harmonization']}</h2>
 		<br/>
 		<h:form>		
-			<p:commandButton value="Listar Regras Criadas" action="listRule" ajax="false" />
+			<p:commandButton value="#{msgs['list.rules']}" action="listRule" ajax="false" />
 		</h:form>
 		<p:tabView id="tabView">  
 		
-			<p:tab id="tab1" title="Depositantes">
+			<p:tab id="tab1" title="#{msgs['applicants']}">
 				<ui:include src="/pages/project/harmonization/applicantHarmonization.xhtml" />
 			</p:tab>  
 			
-			<p:tab id="tab2" title="Inventores">			
+			<p:tab id="tab2" title="#{msgs['inventors']}">			
 				<ui:include src="/pages/project/harmonization/inventorsHarmonization.xhtml" />
 			</p:tab>  
 			
