--- a/periscope-web/src/main/webapp/pages/project/project.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/project.xhtml
@@ -11,42 +11,42 @@
         <ui:define name="content">
             <center>
                 <h:panelGroup rendered="#{not projectController.editing}">
-                    <h1>Novo Projeto</h1>
+                    <h1>#{msgs['new.project']}</h1>
                 </h:panelGroup>
                 <h:panelGroup rendered="#{projectController.editing}">
-                    <h1>Editando Projeto</h1>
+                    <h1>#{msgs['editing.project']}</h1>
                 </h:panelGroup>
                 <br/>
                 <h:form>
                     <h:panelGrid columns="3">
                         <h:panelGrid columns="3" cellpadding="10">
-                            <h:outputLabel id="lblTitle" for="txtTitle" value="Título *" style="font-weight:bold"/>				
+                            <h:outputLabel id="lblTitle" for="txtTitle" value="#{msgs['title']} *" style="font-weight:bold"/>				
                             <p:inputText id="txtTitle" value="#{projectController.project.title}"
-                                         required="true" requiredMessage="Título é obrigatório" />				
+                                         required="true" requiredMessage="#{msgs['obligatory.title']}" />				
                             <p:message for="txtTitle"/>	
 
-                            <h:outputLabel id="lblDescription" for="txtDescription" value="Descrição" style="font-weight:bold"/>				
+                            <h:outputLabel id="lblDescription" for="txtDescription" value="#{msgs['description']}" style="font-weight:bold"/>				
                             <p:inputTextarea id="txtDescription" value="#{projectController.project.description}"/>				
                             <p:message for="txtDescription"/>
 
-                            <h:outputLabel id="lblPublic" value="Público" style="font-weight:bold"/>				
+                            <h:outputLabel id="lblPublic" value="#{msgs['public']}" style="font-weight:bold"/>				
                             <p:selectOneButton id="cmbPublic" value="#{projectController.project.isPublic}">
-                                <f:selectItem itemLabel="Sim" itemValue="true"/>
-                                <f:selectItem itemLabel="Não" itemValue="false"/>					
+                                <f:selectItem itemLabel="#{msgs['yes']}" itemValue="true"/>
+                                <f:selectItem itemLabel="#{msgs['no']}" itemValue="false"/>					
                             </p:selectOneButton>
                             <p:messages for="cmbPublic"/>
 
                         </h:panelGrid>
                         <h:panelGroup  id="pnlObservers">
                             <p:dataTable value="#{projectController.project.observers}" id="observers" var="observer"
-                                         emptyMessage="Não Existem observadores para este projeto."  rows="10"
+                                         emptyMessage="#{msgs['no.observers']}"  rows="10"
                                          paginator="true" paginatorAlwaysVisible="false" paginatorPosition="bottom"
                                          rowKey="#{observer.firstname}">
 
                                 <p:columnGroup type="header">
                                     <p:row>
-                                        <p:column rowspan="2" headerText="Nome" />
-                                        <p:column rowspan="2" headerText="Ações" />
+                                        <p:column rowspan="2" headerText="#{msgs['name']}" />
+                                        <p:column rowspan="2" headerText="#{msgs['actions']}" />
                                     </p:row>
                                 </p:columnGroup>
                                 <p:column>
@@ -74,40 +74,40 @@
                             </h:panelGrid>
                         </h:panelGroup>
                         <p:panel toggleOrientation="vertical">
-                            <h4>Ajuda</h4>
+                            <h4>#{msgs['help']}</h4>
                             <p:accordionPanel activeIndex="">
-                                <p:tab title="Projetos">
+                                <p:tab title="#{msgs['projects']}">
                                     <p:accordionPanel activeIndex="">
-                                        <p:tab title="Privados">
-                                            <p:outputLabel>Projetos privados são aqueles em que somente seu criador tem acesso e poder de exclusão/edição.</p:outputLabel>
+                                        <p:tab title="#{msgs['privados']}">
+                                            <p:outputLabel>#{msgs['private.info']}</p:outputLabel>
                                         </p:tab>
-                                        <p:tab title="Públicos">
-                                            <p:outputLabel>Projetos públicos são aqueles em que todo usuário cadastrado no sistema tem acesso, mas, apenas o criador do projeto tem poder de exclusão/edição</p:outputLabel>
+                                        <p:tab title="#{msgs['publics']}">
+                                            <p:outputLabel>#{msgs['public.info']}</p:outputLabel>
                                         </p:tab>
-                                        <p:tab title="Compartilhados">
-                                            <p:outputLabel>Projetos compartilhados são aqueles em que os usuários selecionados e adicionados tem acesso e poder de exclusão/edição</p:outputLabel>
+                                        <p:tab title="#{msgs['compartilhados']}">
+                                            <p:outputLabel>#{msgs['shared.info']}</p:outputLabel>
                                         </p:tab>
-                                        <p:tab title="Público e Compartilhado">
-                                            <p:outputLabel>O projeto pode ser público e compartilhado, ou seja, todos os usuários cadastrados no sistema tem acesso ao projeto, mas, apenas os usuários selecionados e adicionados na criação ou na edição do projeto podem editar/ecluir o projeto</p:outputLabel>
+                                        <p:tab title="#{msgs['shared.public']}">
+                                            <p:outputLabel>#{msgs['shared.public.info']}</p:outputLabel>
                                         </p:tab>    
-                                        <p:tab title="Privado e Compartilhado">
-                                            <p:outputLabel>O projeto pode também ser privado e compartilhado, ou seja, o projeto estará visivel apenas para os usuários selecionados e adicionados na criação ou na edição do projeto e esses tem acesso e poder de exclusão/edição</p:outputLabel>
+                                        <p:tab title="#{msgs['shared.private']}">
+                                            <p:outputLabel>#{msgs['shared.private.info']}</p:outputLabel>
                                         </p:tab>    
                                     </p:accordionPanel>
                                 </p:tab>
-                                <p:tab title="Usuários">
-                                    <p:outputLabel>É possível adicionar usuários ao projeto, assim, o projeto se torna compartilhado. A lista de seleção contém todos os usuários cadastrados, exceto o usuário que logou no sistema, uma vez que esse é o dono do projeto e portanto já está incluso.</p:outputLabel>
+                                <p:tab title="#{msgs['users']}">
+                                    <p:outputLabel>#{msgs['user.info']}</p:outputLabel>
                                 </p:tab>
                             </p:accordionPanel>
                         </p:panel>
                     </h:panelGrid>			
                     <h:panelGrid columns="2" cellpadding="10">							
 
-                        <h:commandLink value="Salvar" action="#{projectController.create()}"
+                        <h:commandLink value="#{msgs['save']}" action="#{projectController.create()}"
                                        style="color:white"  class="btn btn-large btn-info" rendered="#{not projectController.editing}"/>
-                        <h:commandLink value="Atualizar" action="#{projectController.save()}"
+                        <h:commandLink value="#{msgs['update']}" action="#{projectController.save()}"
                                        style="color:white"  class="btn btn-large btn-info" rendered="#{projectController.editing}"/>
-                        <h:commandLink immediate="true" value="Cancelar" action="projectList" 
+                        <h:commandLink immediate="true" value="#{msgs['cancel']}" action="projectList" 
                                        style="color:white" class="btn btn-large btn-info" />
 
                     </h:panelGrid>	
