--- a/periscope-web/src/main/webapp/pages/project/report/allReports/priorityDate.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/priorityDate.xhtml
@@ -28,7 +28,7 @@
 
                 <h:panelGrid columns="5" cellpadding="4">  
 
-                    <h:outputText value="Inicial:"/>
+                    <h:outputText value="#{msgs['initial']}:"/>
                     <p:calendar  value="#{priorityDateController.filtro.inicio}" maxlength="10" mindate="#{applicantDateReport.minDate}" maxdate="#{applicantDateReport.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy">
                     </p:calendar>
 
@@ -45,7 +45,7 @@
 
 
                     <p:lineChart id="line" value="#{priorityDateController.model}" rendered="#{priorityDateController.model.series.get(0).getData().size()!=0}"
-                                 legendPosition="e" title="Número de depositos por ano"/>
+                                 legendPosition="e" title="#{msgs['application.year']}"/>
 
                     <h:column>
                         <p:graphicImage />
@@ -53,7 +53,7 @@
                     </h:column>
 
                     <h:column>
-                        <p:dataTable emptyMessage="Nenhum depositante cadastrado." var="pair" value="#{priorityDateController.pairs}"
+                        <p:dataTable emptyMessage="#{msgs['no.applicant']}" var="pair" value="#{priorityDateController.pairs}"
                                      >
 
                             <p:column headerText="#{msgs['year']}">
