--- a/periscope-web/src/main/webapp/pages/project/report/allReports/publicationDate.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/publicationDate.xhtml
@@ -16,7 +16,7 @@
 
             <h:form id="chart" styleClass="container">
 
-                <h1>Publicações / #{msgs['year']}</h1>
+                <h1>#{msgs['publications']} / #{msgs['year']}</h1>
                 <br/>
                 <p:selectBooleanCheckbox id="complete" itemLabel="#{msgs['completo']}"
                                          value="#{publicantDateReport.filtro.complete}">
@@ -28,7 +28,7 @@
 
                 <h:panelGrid columns="5" cellpadding="4">  
 
-                    <h:outputText value="Inicial:"/>
+                    <h:outputText value="#{msgs['initial']}:"/>
                     <p:calendar  value="#{publicantDateReport.filtro.inicio}" maxlength="10" mindate="#{publicantDateReport.minDate}" maxdate="#{publicantDateReport.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy">
                     </p:calendar>
 
@@ -45,7 +45,7 @@
 
 
                     <p:lineChart id="line" value="#{publicantDateReport.model}" rendered="#{publicantDateReport.model.series.get(0).getData().size()!=0}"
-                                 legendPosition="e" title="Número de depositos por ano"/>
+                                 legendPosition="e" title="#{msgs['publication.year']}"/>
 
                     <h:column>
                         <p:graphicImage />
@@ -53,7 +53,7 @@
                     </h:column>
 
                     <h:column>
-                        <p:dataTable emptyMessage="Nenhum depositante cadastrado." var="pair" value="#{publicantDateReport.pairs}"
+                        <p:dataTable emptyMessage="#{msgs['no.applicant']}" var="pair" value="#{publicantDateReport.pairs}"
                                      >
 
                             <p:column headerText="#{msgs['year']}">
