--- a/periscope-web/src/main/webapp/pages/project/report/allReports/regionalDistribuition.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/regionalDistribuition.xhtml
@@ -13,19 +13,19 @@
 
         <ui:define name="content">
 
-            <h1>Distribuição por Região</h1>
+            <h1>#{msgs['regional.distribuition']}</h1>
             <h:form styleClass="container">
                 
                 <h:panelGrid columns="1" id="tudo" styleClass="container" >
 
                     <p:barChart id="horizontal" value="#{regionDistribuitionController.model}" rendered="#{regionDistribuitionController.model.series.get(0).getData().size()!=0}"
                                 orientation="horizontal" legendPosition="se" datatipFormat="%s"
-                                title="Número Patentes por Região" />
+                                title="#{msgs['patents.region']}" />
                     <p:dataTable id="regions"
-                                 emptyMessage="Nenhuma patente brasileira" var="pair"
+                                 emptyMessage="#{msgs['no.brazilian']}" var="pair"
                                  value="#{regionDistribuitionController.pairs}">
 
-                        <p:column headerText="Região">
+                        <p:column headerText="#{msgs['region']}">
                             <h:outputText value="#{pair.key}" />
                         </p:column>
 
